Linked Schichtenmodell, Layouts and Aufbau

--- a/Kapitel/04_Admin_Panel/00_Schichtenmodell/main.tex
+++ b/Kapitel/04_Admin_Panel/00_Schichtenmodell/main.tex
@@ -8,8 +8,9 @@ Sie ist durch Layouts und den Aufbau beschrieben.
 
 \paragraph*{Controller}
 Die zweite Schicht ist der Controller und steuert die Interaktionen. Der Controller erweitert die View um Funktionalität. 
-Dieser besteht aus den Klassen Framework, AuthManager und Backend. Framework ist hier die Fassade.
+Dieser besteht aus den Klassen \hyperref[AP_Framework]{Framework}, \hyperref[AP_AuthManager]{AuthManager} und \hyperref[AP_Backend]{Backend}. 
+Diese Klassen befinden sich im Paket \verb#controller#. Framework ist hier die Fassade.
 
 \paragraph*{Model}
 Die letzte Schicht ist das Model. Dieses stellt den Zugriff auf die Daten sicher.
-Das Model besteht aus den Klassen Changes, ChangeAction und Alias sowie dem Interface Change.
+Das Model besteht aus den Klassen \hyperref[AP_Changes]{Changes}, \hyperref[AP_ChangeAction]{ChangeAction} und \hyperref[AP_Alias]{Alias} sowie dem Interface \hyperref[AP_Change]{Change}.
