--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -4,7 +4,7 @@ Die Startseite ist die erste Seite des Admin-Panels und somit der Index.
 Auf der Startseite wird der Name des PSE-Projektes angezeigt sowie eine Kurzbeschreibung.
 
 \paragraph*{Layout}
-Die Startseite nutzt das Public-Layout.
+Die Startseite nutzt das \hyperref[AP_Public_Layout]{Public-Layout}.
 
 \paragraph*{Erreichbarkeit}
 Die Startseite ist unter \href{https://pse.itermori.de/admin}{https://pse.itermori.de/admin} aufrufbar.
@@ -19,7 +19,7 @@ Die Startseite hat die folgenden Aufgaben:
     \item Anzeigen der Beschreibung
     \item Authentifizierungsstelle für Benutzer
     \item Überprüfung des Berechtigungslevels für Benutzer
-    \item Automatische Weiterleitung von Administratoren zum Dashboard
+    \item Automatische Weiterleitung von Administratoren zum \hyperref[AP_Dashboard]{Dashboard}
     \item Anzeigen von Verlinkungen zu Projektressourcen
 \end{itemize}
 
