--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -1,10 +1,10 @@
 \newpage
-\subsection{Dashboard}
+\subsection{Dashboard}\label{AP_Dashboard}
 
 Das Dashboard ist die erste Seite auf die der Benutzer weitergeleitet wird, sofern er sich als Administrator authentifiziert hat.
 
 \paragraph*{Layout}
-Das Dashboard benutzt das Admin-Layout.
+Das Dashboard benutzt das \hyperref[AP_Admin_Layout]{Admin-Layout}.
 
 \paragraph*{Erreichbarkeit}
 Das Dashboard ist unter \href{https://pse.itermori.de/admin/panel}{https://pse.itermori.de/admin/panel} erreichbar.
@@ -22,7 +22,7 @@ Sie zeigt verschiedene Informationen an, so mindestens:
     \item Anzahl der Einträge auf der Blacklist
 \end{itemize}
 
-\paragraph*{Statischer Aufbau}\label{AP_Dashboard}
+\paragraph*{Statischer Aufbau}
 \subparagraph*{Desktop}
 Das Dashboard ist in zwei übereinanderliegende horizontale Boxen aufgeteilt.
 In der oberen Box steht eine Begrüßung.
@@ -41,7 +41,7 @@ Die Abschnitte für die Informationen werden zum Seitenaufruf bestimmt.
 Informationen in Form von konkreten Zahlen werden hochgezählt, bis diese ihren Wert erreicht haben.
 
 \paragraph*{Initialer Zustand}
-Die Informationen werden vom Backend angefragt und anschließend dargestellt.
+Die Informationen werden vom \hyperref[AP_Framework]{Framework} angefragt und anschließend dargestellt.
 
 \subsubsection*{Bilder}
 \begin{minipage}{\linewidth}
