--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -4,7 +4,7 @@
 Die Offizielle-Aliasse-Seite zeigt alle aktuell angenommenen und somit offiziellen Aliasse an.
 
 \paragraph*{Layout}
-Die Offizielle-Alias-Seite benutzt das Admin-Layout.
+Die Offizielle-Alias-Seite benutzt das \hyperref[AP_Admin_Layout]{Admin-Layout}.
 
 \paragraph*{Erreichbarkeit}
 Die Offizielle-Alias-Seite ist unter \href{https://pse.itermori.de/admin/alias}{https://pse.itermori.de/admin/alias} erreichbar.
@@ -17,7 +17,7 @@ Folgende Aufgaben werden erfüllt:
 
 \begin{itemize}
     \item Anzeigen der offiziellen Aliasse
-    \item Löschung von offiziellen Aliassen
+    \item \hyperref[AP_Aktionen_Offizielle_Aliasse_Loschen]{Löschen} von offiziellen Aliassen
     \item Filterung und Sortierung von angezeigten Aliassen nach 
     \begin{itemize}
         \item Alias
@@ -36,12 +36,12 @@ Die untere Box beinhaltet sämtliche angezeigten Aliase in tabellarischer Form. 
     \item Alias: Der Bezeichner des offiziellen Aliases
     \item Gebäudenummer: Das zugehörige Gebäude des offiziellen Aliases
     \item Raumnummer: Der zugehörige Raum des offiziellen Aliases, \dq - \dq{} falls kein zugehöriger Raum existiert
-    \item Aktionen: Löschen
+    \item \hyperref[AP_Aktionen_Offizielle_Aliasse]{Aktionen}: \hyperref[AP_Aktionen_Offizielle_Aliasse_Loschen]{Löschen}
 \end{itemize}
 
 Die Spalten 1 bis 3 beinhalten ein Textfeld zur Anzeige der Informationen.
 Die Spalten 1 bis 3 beinhalten ein Sortierungselement am linken Ende.
-Die Spalte 4 beinhaltet eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
+Die Spalte 4 beinhaltet eine Box. Diese beinhaltet ein Element, dass die Aktion \hyperref[AP_Aktionen_Offizielle_Aliasse_Loschen]{Löschen} repräsentiert.
 
 Jede Zeile enthält die eindeutige Identifizierung des Kartenobjektes. Diese wird nicht angezeigt.
 
@@ -60,11 +60,11 @@ Jeder offizielle Alias befindet sich in seinem eigenen Abschnitt, dieser ist wie
     \item Alias: Der Bezeichner des offiziellen Aliases
     \item Gebäudenummer: Das zugehörige Gebäude des offiziellen Aliases
     \item Raumnummer: Der zugehörige Raum des offiziellen Aliases, \dq - \dq{} falls kein zugehöriger Raum existiert
-    \item Aktionen: Löschen
+    \item \hyperref[AP_Aktionen_Offizielle_Aliasse]{Aktionen}: \hyperref[AP_Aktionen_Offizielle_Aliasse_Loschen]{Löschen}
 \end{enumerate}
 
 Segment 1 befindet sich ganz oben im Alias-Abschnitt. Segmente 2 und 3 folgen untereinander unter Segment 1. \\
-Segment 4 enthält eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
+Segment 4 enthält eine Box. Diese beinhaltet ein Element, dass die Aktion \hyperref[AP_Aktionen_Offizielle_Aliasse_Loschen]{Löschen} repräsentiert.
 Der Alias-Abschnitt selber enthält die eindeutige Identifizierung des Kartenobjektes \verb#mapID# auf dass sich der Alias-Vorschlag bezieht. Dieser wird nicht angezeigt.
 
 \paragraph*{Dynamisches Verhalten}
@@ -82,8 +82,8 @@ Ist \dq Absteigend \dq{} ausgewählt, so werden die offiziellen Aliasse nach der
 Wird über ein Aktions- oder ein Sortierungselement gehovert oder auf ein solches geklickt, so ändert sich die Hintergrundfarbe auf eine hellere Abwandlung der vorherigen Hintergrundfarbe.
 Wird nicht mehr über das Element gehovert oder wurde etwas anderes angeklickt, so wird die Hintergrundfarbe auf den originalen Wert gesetzt.
 
-Wird auf ein Aktionselement eines zugehörigen offiziellen Aliasses geklickt, so wird die entsprechende Aktion ausgeführt.
-Befindet sich ein offizieller Alias in den Änderungen, so wird dieser nicht angezeigt.
+Wird auf ein Aktionselement eines zugehörigen offiziellen Aliasses geklickt, so wird die entsprechende \hyperref[AP_Aktionen_Offizielle_Aliasse]{Aktion} ausgeführt.
+Befindet sich ein offizieller Alias in den \hyperref[AP_Changes]{Änderungen}, so wird dieser nicht angezeigt.
 
 \paragraph*{Initialer Zustand}
 Die offiziellen Aliasse sind absteigend nach dem Gebäude sortiert.
