--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -1,43 +1,46 @@
-\subsection{Admin-Layout}\label{AP_Admin-Layout}
+\subsection{Admin-Layout}\label{AP_Admin_Layout}
 
 \paragraph*{Statischer Aufbau}
 \subparagraph*{Desktop}
-Das Admin-Layout ist in zwei vertikale Bereiche, Navigation und Seiteninhalt, untergliedert. Diese sind nebeneinander angeordnet.
-Die Navigation ist eine vertikale Box mit der Höhe des Sichtbereichs als Höhe.
-Die Navigation ist so breit wie ihr Inhalt und einfarbig.
+Das Admin-Layout ist in zwei vertikale Bereiche, \hyperref[AP_Admin_Layout_Navigation]{Navigation} und Seiteninhalt, untergliedert. Diese sind nebeneinander angeordnet.
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} ist eine vertikale Box mit der Höhe des Sichtbereichs als Höhe.
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} ist so breit wie ihr Inhalt und einfarbig.
 Der Seiteninhalt ist eine vertikale Box. Der Seiteninhalt hat eine Mindesthöhe von der Höhe des Sichtbereichs und keine Maximalhöhe.
-Der Seiteninhalt nimmt den restlichen horizontalen Bereich ein, der nicht durch die Navigation beansprucht wird.
+Der Seiteninhalt nimmt den restlichen horizontalen Bereich ein, der nicht durch die \hyperref[AP_Admin_Layout_Navigation]{Navigation} beansprucht wird.
 Der Seiteninhalt hat eine einheitliche Hintergrundfarbe.
 
 \subparagraph*{Mobil}
-Das Admin-Layout ist in zwei horizontale Bereiche, Navigation und Seiteninhalt, untergliedert.
-Die Navigation befindet sich am unteren Bildschirmrand und nimmt im geschlossenen Zustand bis zu 10\% der Sichtbereichshöhe ein.
-Die Navigation hat eine einheitliche Hintergrundfarbe und nimmt den kompletten Horizontalen Bereich ein.
-Der Seiteninhalt ist am oberen Bildschirmrand und nimmt die verbleibende Höhe bis zur Navigation ein.
+Das Admin-Layout ist in zwei horizontale Bereiche, \hyperref[AP_Admin_Layout_Navigation]{Navigation} und Seiteninhalt, untergliedert.
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} befindet sich am unteren Bildschirmrand und nimmt im geschlossenen Zustand bis zu 10\% der Sichtbereichshöhe ein.
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} hat eine einheitliche Hintergrundfarbe und nimmt den kompletten Horizontalen Bereich ein.
+Der Seiteninhalt ist am oberen Bildschirmrand und nimmt die verbleibende Höhe bis zur \hyperref[AP_Admin_Layout_Navigation]{Navigation} ein.
 Der Seiteninhalt nimmt den kompletten horizontalen Bereich ein und hat eine einheitliche Hintergrundfarbe.
 
 \paragraph*{Dynamisches Verhalten}
 \subparagraph*{Desktop}
-Die Navigation ist zunächst nach links eingeklappt und zeigt keine Inhalte an. Wird über die Navigation gehovert oder auf diese geklickt,
-so klappt sich die Navigation nach rechts aus. 
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} ist zunächst nach links eingeklappt und zeigt keine Inhalte an. Wird über die \hyperref[AP_Admin_Layout_Navigation]{Navigation} gehovert oder auf diese geklickt,
+so klappt sich die \hyperref[AP_Admin_Layout_Navigation]{Navigation} nach rechts aus. 
 
 \subparagraph*{Mobil}
-Die Navigation ist zunächst nach unten eingeklappt. Wird über die Navigation gehovert oder auf diese geklickt,
-so klappt sich die Navigation nach oben aus.
+Die \hyperref[AP_Admin_Layout_Navigation]{Navigation} ist zunächst nach unten eingeklappt. Wird über die \hyperref[AP_Admin_Layout_Navigation]{Navigation} gehovert oder auf diese geklickt,
+so klappt sich die \hyperref[AP_Admin_Layout_Navigation]{Navigation} nach oben aus.
 
 \paragraph*{Allgemeines dynamisches Verhalten}
 Alle Seiten, die auf dem Admin-Layout basieren, stehen nur angemeldeten Administratoren zur Verfügung. 
 Nicht ausreichend autorisierte Benutzer werden auf die Startseite weitergeleitet, wenn diese versuchen, eine solche Seite aufzurufen.
 
-\subparagraph*{Navigation}
+\subparagraph*{Navigation}\label{AP_Admin_Layout_Navigation}
 Die Navigation bleibt ausgeklappt, wenn über eines der Elemente in der Navigation gehovert oder auf eines geklickt wird.
 Wird über ein Element der Navigation gehovert oder geklickt, so wird die Hintergrundfarbe dieses Elementes erhellt und die Schriftfarbe geändert.
 Wird nicht mehr über ein Element der Navigation gehovert oder wird auf ein anderes Element geklickt, so werden Hintergrundfarbe und Schriftfarbe zurückgesetzt.
 Wird auf ein Verlinkungselement geklickt, so wird auf die zugehörige Seite weitergeleitet.
-Wird auf das \dq Logout\dq - Element geklickt, so wird der Benutzer abgemeldet und auf die Startseite weitergeleitet.
+Wird auf das \dq Logout\dq - Element geklickt, so wird der Benutzer abgemeldet und auf die Startseite weitergeleitet. Siehe \hyperref[AP_Framework_logout]{\texttt{Framework::logout}} für mehr Informationen.
 
 \paragraph*{Dargestellte Inhalte}
 \subparagraph*{Navigation}
 Die Navigation beinhaltet für jede Seite, die das Admin-Layout verwendet, ein Verlinkungselement. 
-Diese Verlinkungselemente sind untereinander angeordnet, ausgehend vom obersten Punkt der Navigation.
+Diese Verlinkungselemente sind untereinander angeordnet, ausgehend vom oberen Rand der Navigation.
 Als letzten Eintrag besitzt die Navigation ein Element mit der Aufschrift \dq Logout \dq. Dieser Eintrag befindet sich ganz unten in der Navigation.
+
+\subparagraph*{Seiteninhalt}
+Der Seiteninhalt wird durch die Seite bestimmt, die das Admin-Layout verwendet.
