--- a/Kapitel/04_Admin_Panel/02_Aufbau/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/00_Beschreibung/main.tex
@@ -1,1 +1,1 @@
-Das Admin-Panel ist eine Single-Page-Application (SPA) und ist in 5 verschiedene Abschnitte aufgeteilt.
+Das Admin-Panel ist eine Single-Page-Application (SPA) und ist in verschiedene Abschnitte aufgeteilt.
