--- a/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
@@ -4,7 +4,7 @@
 Die Blacklist-Seite zeigt alle aktuellen Einträge der Blacklist an.
 
 \paragraph*{Layout}
-Die Blacklist-Seite benutzt das Admin-Layout.
+Die Blacklist-Seite benutzt das \hyperref[AP_Admin_Layout]{Admin-Layout}.
 
 \paragraph*{Erreichbarkeit}
 Die Blacklist-Seite ist unter \href{https://pse.itermori.de/admin/blacklist}{https://pse.itermori.de/admin/blacklist} erreichbar.
@@ -17,7 +17,7 @@ Folgende Aufgaben werden erfüllt:
 
 \begin{enumerate}
     \item Anzeigen der Blacklisteinträge
-    \item Löschen einzelner Blacklisteinträge
+    \item \hyperref[AP_Aktionen_Blacklist_Loschen]{Löschen} einzelner Blacklisteinträge
     \item Filterung und Sortierung der Blacklisteinträge
 \end{enumerate}
 
@@ -29,12 +29,12 @@ Die untere Box enthält die angezeigten Blacklisteinträge in tabellarischer For
 
 \begin{enumerate}
     \item Eintrag: Bezeichner des Blacklisteintrags
-    \item Aktionen: Löschen
+    \item \hyperref[AP_Aktionen_Blacklist]{Aktionen}: \hyperref[AP_Aktionen_Blacklist_Loschen]{Löschen}
 \end{enumerate}
 
 Die Spalte 1 enthält ein Textfeld zum Anzeigen des Eintrags.
 Die Spalte 1 beinhaltet ein Sortierungselement am linken Ende.
-Die Spalte 2 beinhaltet eine Box. Diese Box beinhaltet dass die Aktion \dq Löschen \dq{} repräsentiert.
+Die Spalte 2 beinhaltet eine Box. Diese Box beinhaltet ein Element dass die \hyperref[AP_Aktionen_Blacklist]{Aktion} \hyperref[AP_Aktionen_Blacklist_Loschen]{Löschen} repräsentiert.
 
 \subparagraph*{Mobil}
 Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein.\\
@@ -47,11 +47,11 @@ Jeder Blacklisteintrag befindet sich in seinem eigenen Abschnitt, dieser ist wie
 
 \begin{enumerate}
     \item Eintrag: Der Bezeichner des Blacklisteintrags
-    \item Aktionen: Löschen
+    \item \hyperref[AP_Aktionen_Blacklist]{Aktionen}: \hyperref[AP_Aktionen_Blacklist_Loschen]{Löschen}
 \end{enumerate}
 
 Segment 1 befindet sich ganz oben im Blacklisteintrag-Abschnitt und enthält ein Textfeld zum Anzeigen des Eintrags.
-Segment 2 enthält eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
+Segment 2 enthält eine Box. Diese beinhaltet ein Element, dass die Aktion \hyperref[AP_Aktionen_Blacklist]{Aktion} \hyperref[AP_Aktionen_Blacklist_Loschen]{Löschen} repräsentiert.
 
 \paragraph*{Dynamisches Verhalten}
 \subparagraph*{Desktop}
@@ -68,8 +68,8 @@ Ist \dq Absteigend \dq{} ausgewählt, so werden die Blacklisteinträge alphabeti
 Wird über ein Aktions- oder ein Sortierungselement gehovert oder auf ein solches geklickt, so ändert sich die Hintergrundfarbe auf eine hellere Abwandlung der vorherigen Hintergrundfarbe. \\
 Wird nicht mehr über das Element gehovert oder wurde etwas anderes angeklickt, so wird die Hintergrundfarbe auf den originalen Wert gesetzt.
 
-Wird auf ein Aktionselement eines zugehörigen Blacklisteintrags geklickt, so wird die entsprechende Aktion ausgeführt.
-Befindet sich ein Blacklisteintrag in den Änderungen, so wird dieser nicht angezeigt.
+Wird auf ein Aktionselement eines zugehörigen Blacklisteintrags geklickt, so wird die entsprechende \hyperref[AP_Aktionen_Blacklist]{Aktion} ausgeführt.
+Befindet sich ein Blacklisteintrag in den \hyperref[AP_Changes]{Änderungen}, so wird dieser nicht angezeigt.
 
 \paragraph*{Initialer Zustand}
 Die Blacklist ist absteigend nach den Blacklisteinträgen sortiert.
