--- a/Kapitel/04_Admin_Panel/main.tex
+++ b/Kapitel/04_Admin_Panel/main.tex
@@ -1,6 +1,7 @@
 \newpage
 \chapter{Admin-Panel}
 
+\inprelmod{00_Schichtenmodell}
 \inprelmod{01_Layouts}
 \inprelmod{02_Aufbau}
 \inprelmod{03_Aktionen}
