--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/01_Akzeptieren/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/01_Akzeptieren/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Akzeptieren}\label{AP_Aktionen_Änderungen_Akzeptieren}
+\subsubsection{Akzeptieren}\label{AP_Aktionen_Anderungen_Akzeptieren}
 
 Die Aktion die ausgeführt wird, um eine Änderung anzunehmen.
 
@@ -13,6 +13,6 @@ Die Änderung wird nicht mehr angezeigt und ist nicht mehr gespeichert. Die Änd
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Auf der zur Änderung gehörende Instanz von \verb#Change# wird die Methode \verb#Change::perform# ausgeführt.
+    \item Es wird die Methode \hyperref[AP_Framework_performChange]{Framework::performChange} mit dieser Änderung aufgerufen.
     \item Die Änderung wird aus der Sammlung an Änderungen entfernt.
 \end{enumerate}
