--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/04_Revidiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/04_Revidiere_Alle/main.tex
@@ -14,5 +14,5 @@ Die Änderungen werden nicht mehr angezeigt und sind nicht mehr gespeichert. Die
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Entferne alle Änderungen aus der Sammlung an Änderungen.
+    \item Alle Änderungen aus der Sammlung an Änderungen werden, durch den Aufruf von \hyperref[AP_Framework_removeChange]{Framework::removeChange} mit jeder Änderung, entfernt.
 \end{enumerate}
