--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
@@ -1,11 +1,11 @@
 \newpage
-\subsubsection{Ablehnen}\label{AP_Aktionen_Alias_Vorschläge_Ablehnen}
+\subsubsection{Ablehnen}\label{AP_Aktionen_Alias_Vorschlage_Ablehnen}
 
 Die Aktion die ausgeführt wird, um einen Alias-Vorschlag abzulehnen.
 
 \paragraph*{Ziel}
 Der Alias-Vorschlag, der diese Aktion ausgelöst hat, wird zur Ablehnung markiert und vorbereitet.
-Der zugehörige Alias-Vorschlag wird nicht mehr in der Alias-Vorschläge-Seite angezeigt.
+Der zugehörige Alias-Vorschlag wird nicht mehr in der \hyperref[AP_Alias_Vorschlage]{Alias-Vorschläge-Seite} angezeigt.
 
 \paragraph*{Vorbedingung}
 Alias-Vorschlag ist vorhanden und wird angezeigt.
@@ -15,17 +15,16 @@ Alias-Vorschlag wird nicht mehr angezeigt. Der Alias-Vorschlag ist zur Ablehnung
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Das Interface \verb#Change# wird durch implementierung der Methode \verb#Change::perform# instanziiert. \\
-          Dabei ruft die Methode \verb#Change::perform# dieser Instanz die Methode \verb#Backend::declineAliasSuggestion# mit folgenden Parametern auf \begin{enumerate}
-              \item alias: String = Der Bezeichner des Alias-Vorschlags
-              \item mapID: String = Der Kartenobjektidentifizierer des Alias-Vorschlags
-          \end{enumerate}
-    \item Die erzeugte Instanz wird den Changes durch die Methode \verb#Changes::addChange# mit folgenden Parametern übergeben: \begin{enumerate}
+    \item Das Interface \hyperref[AP_Change]{\texttt{Change}} wird durch implementierung der Methode \hyperref[AP_Change_perform]{\texttt{Change::perform}} instanziiert. \\
+          Dabei ruft die Methode \hyperref[AP_Change_perform]{\texttt{Change::perform}} dieser Instanz die Methode \\
+          \hyperref[AP_Framework_declineAliasSuggestion]{\texttt{Framework::declineAliasSuggestion}} auf.
+    \item Die erzeugte Instanz wird den \hyperref[AP_Changes]{Änderungen} durch die Methode \hyperref[AP_Framework_addChange]{\texttt{Framework::addChange}} mit folgenden Parametern übergeben: \begin{enumerate}
         \item action: Change
         \item metadata: JSON mit folgenden Werten: \begin{enumerate}
             \item Alias: String = Der Bezeichner des Alias-Vorschlags
             \item Gebäudenummer: String = Gebäudenummer des Alias-Vorschlags
             \item Raum: String = Raum des Alias-Vorschlags
         \end{enumerate}
+        \item \dq Alias-Vorschläge \dq: String
     \end{enumerate}
 \end{enumerate}
