--- a/Kapitel/04_Admin_Panel/03_Aktionen/02_Offizielle_Aliasse/01_Löschen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/02_Offizielle_Aliasse/01_Löschen/main.tex
@@ -1,10 +1,10 @@
-\subsubsection{Löschen}\label{AP_Aktionen_Offizielle_Aliasse_Löschen}
+\subsubsection{Löschen}\label{AP_Aktionen_Offizielle_Aliasse_Loschen}
 
 Die Aktion die ausgeführt wird, um einen offiziellen Alias zu löschen.
 
 \paragraph*{Ziel}
 Der offizielle Alias, der diese Aktion ausgelöst hat, wird zur Löschung markiert und vorbereitet.
-Der zugehörige offizielle Alias wird nicht mehr in der Offizielle-Alias-Seite angezeigt.
+Der zugehörige offizielle Alias wird nicht mehr in der \hyperref[AP_Offizielle_Aliasse]{Offizielle-Alias-Seite} angezeigt.
 
 \paragraph*{Vorbedingung}
 Offizieller Alias ist vorhanden und wird angezeigt.
@@ -14,18 +14,16 @@ Offizieller Alias wird nicht mehr angezeigt. Der offizielle Alias ist zur Lösch
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Das Interface \verb#Change# wird durch implementierung der Methode \verb#Change::perform# instanziiert. \\
-          Dabei ruft die Methode \verb#Change::perform# dieser Instanz die \\
-          Methode \verb#Backend::deleteOfficialAlias# mit folgenden Parametern auf \begin{enumerate}
-              \item alias: String = Der zu löschende offizielle Alias
-              \item mapID: String = Der Kartenobjektidentifizierer dieses offiziellen Aliases
-          \end{enumerate}
-    \item Die erzeugte Instanz wird den Changes durch die Methode \verb#Changes::addChange# mit folgenden Parametern übergeben: \begin{enumerate}
+    \item Das Interface \hyperref[AP_Change]{\texttt{Change}} wird durch implementierung der Methode \hyperref[AP_Change_perform]{\texttt{Change::perform}} instanziiert. \\
+          Dabei ruft die Methode \hyperref[AP_Change_perform]{\texttt{Change::perform}} dieser Instanz die Methode \\
+          \hyperref[AP_Framework_deleteOfficialAlias]{\texttt{Framework::deleteOfficialAlias}} auf.
+    \item Die erzeugte Instanz wird den \hyperref[AP_Changes]{Änderungen} durch die Methode \hyperref[AP_Framework_addChange]{\texttt{Framework::addChange}} mit folgenden Parametern übergeben: \begin{enumerate}
         \item action: Change
         \item metadata: JSON mit folgenden Werten: \begin{enumerate}
-            \item Alias: String = Bezeichner des offiziellen Aliases
-            \item Gebäudenummer: String = Gebäudenummer des offiziellen Aliases
-            \item Raum: String = Raum des offiziellen Aliases
+            \item Alias: String = Der Bezeichner des Alias-Vorschlags
+            \item Gebäudenummer: String = Gebäudenummer des Alias-Vorschlags
+            \item Raum: String = Raum des Alias-Vorschlags
         \end{enumerate}
+        \item \dq Offizielle Aliasse \dq: String
     \end{enumerate}
 \end{enumerate}
