--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{Revidieren}\label{AP_Aktionen_Änderungen_Revidieren}
+\subsubsection{Revidieren}\label{AP_Aktionen_Anderungen_Revidieren}
 
 Die Aktion die ausgeführt wird, um eine Änderung zu revidieren.
 
@@ -14,5 +14,5 @@ Die Änderung wird nicht mehr angezeigt. Die Änderung wurde revidiert und ist n
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Die Änderung wird aus der Sammlung an Änderungen entfernt.
+    \item Die Änderung wird aus der Sammlung an Änderungen, durch den Aufruf von \hyperref[AP_Framework_removeChange]{Framework::removeChange} mit dieser Änderung, entfernt.
 \end{enumerate}
