--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{Akzeptiere Alle}\label{AP_Aktionen_Änderungen_Akzeptiere_Alle}
+\subsubsection{Akzeptiere Alle}\label{AP_Aktionen_Anderungen_Akzeptiere_Alle}
 
 Die Aktion die ausgeführt wird, um alle Änderungen anzunehmen.
 
@@ -14,6 +14,6 @@ Die Änderungen werden nicht mehr angezeigt und sind nicht mehr gespeichert. Die
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Rufe auf jeder Änderung die Methode \verb#Change::perform#  der zugehörenden Instanz von \verb#Change# auf.
-    \item Entferne alle Änderungen aus der Sammlung an Änderungen.
+    \item Es wird die Methode \hyperref[AP_Framework_performChange]{Framework::performChange} mit jeder Änderung aufgerufen.
+    \item Jede Änderung wird aus der Sammlung an Änderungen entfernt.
 \end{enumerate}
