Add method 'getAlias_int,int_ListString'
Add method 'getAlias_int,int_ListString'
to 'AliasQuery'.

--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/main.tex
@@ -3,5 +3,6 @@
 \inprelmod{Beschreibung}
 \inprelmod{getAlias_int_ListString}
 \inprelmod{getAlias_int,String_ListString}
+\inprelmod{getAlias_int,int_ListString}
 \inprelmod{getUpdates_int_ListStringInt,ListStringInt,int}
 \inprelmod{getBlacklist_ListString}
