Added diagrams and package declarations

--- a/Kapitel/04_Admin_Panel/04_Klassen/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/00_Beschreibung/main.tex
@@ -1,4 +1,36 @@
-\vspace{2em}
+Im folgenden werden sämtliche Klassen und Interfaces aufgeführt, die das Admin-Panel realisieren.
+Hierbei ist zu beachten, dass die \verb#View# hier nicht aufgeführt wird, da diese durch HTML realisiert ist.
+
+\subsection{Paketdiagramme}
+\paragraph{Controller}
+\vspace{1em}
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=0.9\textwidth]{controller.pdf}
+    \captionof{figure}{Paket controller}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
+
+\paragraph{Model}
+\vspace{1em}
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=0.9\textwidth]{model.pdf}
+    \captionof{figure}{Paket model}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
+
+\paragraph{Paketdiagramm}
+\vspace{1em}
+\begin{center}
+    \captionsetup[figure]{labelformat=empty}
+    \inprelimg[width=0.9\textwidth]{package_diagram.pdf}
+    \captionof{figure}{Paketdiagramm}
+    \captionsetup[figure]{labelformat=default}
+\end{center}
+
+\paragraph{Klassendiagram}
+\vspace{1em}
 \begin{center}
     \captionsetup[figure]{labelformat=empty}
     \inprelimg[width=0.9\textwidth]{classdiagram.pdf}
