--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/00_Beschreibung/main.tex
@@ -1,3 +1,9 @@
 Der AuthManager implementiert die Benutzerauthentifizierung durch Verwendung des Open ID Connect Protokolls (OIDC).
 Hierfür wird die OIDC-Client-JS \footnote{\href{https://github.com/IdentityModel/oidc-client-js}{https://github.com/IdentityModel/oidc-client-js}} Library verwendet.
 Der AuthManager muss zuerst konfiguriert werden, bevor dieser verwendet werden kann.
+
+\paragraph*{Paket}
+controller
+
+\paragraph*{Schicht}
+Controller
