--- a/Kapitel/04_Admin_Panel/04_Klassen/02_Change/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/02_Change/00_Beschreibung/main.tex
@@ -1,3 +1,9 @@
 Das Interface \verb#Change# beschreibt die benötigten Schnittstellen für Änderungen.
-Das Interface besteht aus einer Methode \verb#perform#.
+Das Interface besteht aus einer Methode \hyperref[AP_Change_perform]{\texttt{Change::perform}}.
 Das Interface ermöglicht das Entwurfsmuster Strategie für das Verhalten der einzelnen Änderungen.
+
+\paragraph*{Paket}
+model
+
+\paragraph*{Schicht}
+Model
