--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/00_Beschreibung/main.tex
@@ -1,3 +1,9 @@
 Diese Klasse beschreibt eine konkrete Änderung und die zugehörigen Metadaten.
 Diese Klasse ist eine Datenklasse.
 Diese Klasse notiert sich den Zeitpunkt der Erstellung.
+
+\paragraph*{Paket}
+model
+
+\paragraph*{Schicht}
+Model
