--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/00_Beschreibung/main.tex
@@ -1,5 +1,8 @@
 Die Klasse \verb#Changes# organisiert alle Änderungen die in einer Sitzung gemacht wurden.
 Änderungen können hinzugefügt und entfernt werden.
 
-\paragraph*{Implementiert}
-Iterable<ChangeAction>
+\paragraph*{Paket}
+model
+
+\paragraph*{Schicht}
+Model
