--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/00_Beschreibung/main.tex
@@ -1,3 +1,9 @@
 Diese Klasse ist eine Fassade für die Controller-Schicht.
 Als solche delegiert sie eingehende Fragen an die entsprechenden Klassen weiter.
 Des Weiteren ist diese Klasse ein Singleton.
+
+\paragraph*{Paket}
+controller
+
+\paragraph*{Schicht}
+Controller
