--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/00_Beschreibung/main.tex
@@ -1,2 +1,8 @@
 Die Klasse Backend stellt die Kommunikation mit dem Backend des Servers sicher.
 Dabei wird zwischen Queries und Mutations unterschieden.
+
+\paragraph*{Paket}
+controller
+
+\paragraph*{Schicht}
+Controller
