--- a/Kapitel/04_Admin_Panel/04_Klassen/02_Change/01_perform/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/02_Change/01_perform/main.tex
@@ -1,8 +1,8 @@
-\paragraph{\texttt{+ perform() : boolean}}\label{AP_Change_perform}%$$$M
+\paragraph{\texttt{+ perform() : Boolean}}\label{AP_Change_perform}%$$$M
 \paragraph*{Beschreibung}
 Führe eine Änderung einer Aktion durch.
 Dies ist eine Interface-Methode, die implementiert werden muss.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich durchgeführt, falsch sonst
+Wahr, wenn erfolgreich durchgeführt, falsch sonst.
