--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/02_getCreationTime/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/02_getCreationTime/main.tex
@@ -1,7 +1,7 @@
 \paragraph{\texttt{+ getCreationTime() : Date}}\label{AP_ChangeAction_getCreationTime}%$$$M
 \paragraph*{Beschreibung}
-Getter für den Erstellungszeitpunkt
+Getter für den Erstellungszeitpunkt.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Date mit dem Erstellungszeitpunkt
+Date mit dem Erstellungszeitpunkt.
