--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
@@ -3,7 +3,7 @@
 Ermöglicht die Konfiguration des AuthManager für einen OIDC-Provider.
 \paragraph*{Beschreibung}
 Ermöglicht die Konfiguration des AuthManager für einen OIDC-Provider.
-Hierfür wird die UserManagerSettings-Klasse \footnote{href{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}} von 
+Hierfür wird die UserManagerSettings-Klasse \footnote{\href{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}} von 
 OIDC-Client-JS \footnote{\href{https://github.com/IdentityModel/oidc-client-js}{https://github.com/IdentityModel/oidc-client-js}} verwendet.
 Mögliche Einstellungen können dem Wiki \footnote{\href{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}} entnommen werden.
 \paragraph*{Parameter}
@@ -11,4 +11,4 @@ Mögliche Einstellungen können dem Wiki \footnote{\href{https://github.com/Iden
     \item settings: UserManagerSettings = Instanz mit den Einstellungen zur Verbindung mit einem OIDC-Provider.
 \end{itemize}
 \paragraph*{Rückgabewert}
-void
+Void.
