--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/04_getAccessToken/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/04_getAccessToken/main.tex
@@ -3,10 +3,10 @@
 Getter für den Access-Token.
 \paragraph*{Beschreibung}
 Getter für den Access-Token.
-Ist kein Access-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der AuthManager durch \verb#AuthManager::configure# konfiguriert wurde.
+Ist kein Access-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der AuthManager durch \hyperref[AP_AuthManager_configure]{\texttt{AuthManager::configure}} konfiguriert wurde.
 Ist der Access-Token invalide, so wird versucht diesen zu erneuern.
-Treten Fehler auf, oder wurde der AuthManager nicht authentifiziert, wird \verb#null# zurückgegeben.
+Treten Fehler auf, oder wurde der \hyperref[AP_AuthManager]{AuthManager} nicht konfiguriert, wird \verb#null# zurückgegeben.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Access-Token oder \verb#null#
+Access-Token oder \verb#null#.
