--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/05_getIDToken/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/05_getIDToken/main.tex
@@ -3,10 +3,10 @@
 Getter für den ID-Token.
 \paragraph*{Beschreibung}
 Getter für den ID-Token.
-Ist kein ID-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der AuthManager durch \verb#AuthManager::configure# konfiguriert wurde.
+Ist kein ID-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der AuthManager durch \hyperref[AP_AuthManager_configure]{\texttt{AuthManager::configure}}konfiguriert wurde.
 Ist der ID-Token invalide, so wird versucht diesen zu erneuern.
-Treten Fehler auf, oder wurde der AuthManager nicht authentifiziert, wird \verb#null# zurückgegeben.
+Treten Fehler auf, oder wurde der \hyperref[AP_AuthManager]{AuthManager} nicht konfiguriert, wird \verb#null# zurückgegeben.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-ID-Token oder \verb#null#
+ID-Token oder \verb#null#.
