--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/03_getCategory/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/03_getCategory/main.tex
@@ -1,7 +1,7 @@
 \paragraph{\texttt{+ getCategory() : String}}\label{AP_ChangeAction_getCategory}%$$$M
 \paragraph*{Beschreibung}
-Getter für die Änderungskategorie
+Getter für die Änderungskategorie.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Änderungskategorie als String
+Änderungskategorie als String.
