--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
@@ -1,7 +1,7 @@
-\paragraph{\texttt{+ perform() : boolean}}\label{AP_ChangeAction_perform}%$$$M
+\paragraph{\texttt{+ perform() : Boolean}}\label{AP_ChangeAction_perform}%$$$M
 \paragraph*{Beschreibung}
 Ruft \verb#Change::perform# dieser Änderung auf.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich durchgeführt, falsch sonst
+Wahr, wenn erfolgreich durchgeführt, falsch sonst.
