--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
@@ -6,9 +6,9 @@ Erzeuge ein Änderungsobjekt mit einer Instanz von \verb#Change#, Metadaten und 
 Dabei wird der aktuelle Zeitpunkt hinterlegt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item change : Change = Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
-    \item metadata : JSON = JSON mit darzustellenden Informationen.
+    \item change: Change = Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
+    \item metadata: JSON = JSON mit darzustellenden Informationen.
     \item category: String = Die Kategorie der Änderung
 \end{itemize}
 \paragraph*{Rückgabewert}
-Keiner
+Void.
