Added diagrams to map

--- a/Kapitel/02_App/03_Map/00_Paketdiagramm/main.tex
+++ b/Kapitel/02_App/03_Map/00_Paketdiagramm/main.tex
@@ -1,3 +1,6 @@
-\subsection{Paketdiagramm}
-
-\textbf{TODO}
+\begin{samepage}
+    \subsection{Paketdiagramm}\label{App_Map_Paketdiagramm}
+    Im Folgenden ist das Paketdiagramm zu sehen.\\
+    \includegraphics[width=15cm]{\currfiledir images/Paketdiagramm_Map.pdf}
+    
+\end{samepage}
