--- a/Kapitel/02_App/03_Map/02_ViewModel/Klassendiagramm/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/Klassendiagramm/main.tex
@@ -1,3 +1,6 @@
-\subsubsection{Klassendiagramm}\label{App_Map_ViewModel_Klassendiagramm}
-
-\textbf{TODO}
+\begin{samepage}
+    \subsubsection{Klassendiagramm}\label{App_Map_ViewModel_Klassendiagramm}
+    Im Folgenden ist das Klassendiagramm der Klassen zum ViewModel der Karte zu sehen.
+    \includegraphics[width=15cm]{\currfiledir images/Diagramm_Karte_ViewModel.pdf}
+    
+\end{samepage}
