--- a/Kapitel/02_App/03_Map/03_Model/Klassendiagramm/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/Klassendiagramm/main.tex
@@ -1,3 +1,6 @@
-\subsubsection{Klassendiagramm}\label{App_Map_Model_Klassendiagramm}
-
-\textbf{TODO}
+\begin{samepage}
+    \subsubsection{Klassendiagramm}\label{App_Map_Model_Klassendiagramm}
+    Im Folgenden ist das Klassendiagramm der Klassen zum Model der Karte zu sehen.
+    \includegraphics[width=16cm]{\currfiledir images/Diagramm_Map_Model.pdf}
+    
+\end{samepage}
