Fix typo in 'AliasQuery/getAlias_int,int_ListString'

--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int,int_ListString/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int,int_ListString/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{\texttt{+getAlias(mapID : int, amount : int) : Iterable<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt eine Liste der Aliasse des gewünschten Kartenobjekts, wobei die Liste insgesamt maximal eine bestimmte Anzahl an Aliasse hat.
+Gibt eine Liste der Aliasse des gewünschten Kartenobjekts, wobei die Liste insgesamt maximal eine bestimmte Anzahl an Aliasse hat, zurück.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Gibt die Anweisung an die Schnittstelle \texttt{AliasService}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
