Added forgotten description

--- a/Kapitel/02_App/03_Map/main.tex
+++ b/Kapitel/02_App/03_Map/main.tex
@@ -1,4 +1,8 @@
 \section{Map}
+\paragraph*{Paketname}
+map
+\paragraph*{Beschreibung}
+Dieses Paket bietet Funktionalität um eine Karte anzuzeigen und mit ihr zu interagieren.
 
 \inprelmod{00_Paketdiagramm}
 \inprelmod{01_View}
