Fixed spelling, punctuation, references. Added count methods.

--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
@@ -1,12 +1,12 @@
-\paragraph{\texttt{+ addChange(change: Change, metadata: JSON, category: String) : boolean}}\label{AP_Changes_addChange}%$$$M
+\paragraph{\texttt{+ addChange(change: Change, metadata: JSON, category: String) : Boolean}}\label{AP_Changes_addChange}%$$$M
 \paragraph*{Beschreibung}
 Fügt eine Änderung mitsamt ihrer Metadaten hinzu.
-Dabei wird eine Instanz von \verb#ChangeAction# erzeugt und der aktuelle Zeitpunkt hinterlegt.
+Dabei wird eine Instanz von \hyperref[AP_ChangeAction]{\texttt{ChangeAction}} erzeugt und der aktuelle Zeitpunkt hinterlegt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item change : Change = Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
-    \item metadata : JSON = JSON mit darzustellenden Informationen.
+    \item change: Change = Instanz des Interfaces \hyperref[AP_Change]{\texttt{Change}}, die die Änderung durchführt.
+    \item metadata: JSON = JSON mit darzustellenden Informationen.
     \item category: String = Die Kategorie der Änderung
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, falsch sonst
+Wahr, wenn erfolgreich, falsch sonst.
