--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/01_getBlacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/01_getBlacklist/main.tex
@@ -4,8 +4,8 @@ Getter für die Blacklist.
 \paragraph*{Beschreibung}
 Diese Methode fragt die aktuelle Blacklist vom Server ab und gibt sie zurück.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Iterable<String>
+Iterable$<$String$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
