--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/02_getOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/02_getOfficialAlias/main.tex
@@ -4,8 +4,8 @@ Getter für die offiziellen Aliasse.
 \paragraph*{Beschreibung}
 Diese Methode fragt die aktuellen offiziellen Aliasse vom Server ab und gibt sie zurück.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Iterable<Alias>
+Iterable$<$\hyperref[AP_Alias]{Alias}$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
