--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/main.tex
@@ -4,3 +4,6 @@
 \inprelmod{02_getOfficialAlias}
 \inprelmod{03_getAliasSuggestions}
 \inprelmod{04_isAdmin}
+\inprelmod{05_getCountAliasSuggestions}
+\inprelmod{06_getCountOfficialAliasses}
+\inprelmod{07_getCountBlacklistEntries}
