--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getChanges/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getChanges/main.tex
@@ -5,4 +5,4 @@ Im JSON stehen die Metadaten, die Zeit der Erstellung und die Kategorie.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Iterable<JSON>
+Iterable$<$JSON$>$
