--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/04_contains/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/04_contains/main.tex
@@ -1,9 +1,10 @@
-\paragraph{\texttt{+ contains(action: ChangeAction) : boolean}}\label{AP_Changes_contains}%$$$M
+\paragraph{\texttt{+ contains(metadata: JSON, category: String) : Boolean}}\label{AP_Changes_contains}%$$$M
 \paragraph*{Beschreibung}
 Prüft ob die gegebene Änderung enthalten ist.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item action : ChangeAction = Instanz der Klasse \verb#ChangeAction#, die die Änderungsaktion repräsentiert.
+    \item metadata: JSON = Metadaten der entsprechenden Änderungen.
+    \item category: String = Kategorie der Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn vorhanden, falsch sonst
+Wahr, wenn vorhanden, falsch sonst.
