--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
@@ -10,6 +10,6 @@ Dabei müssen diese die angegebene Mindestanzahl an positiven und negativen Bewe
     \item minNegative: int = Die minimale Anzahl an negativen Bewertungen.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Iterable<Alias>
+Iterable$<$\hyperref[AP_Alias]{Alias}$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
