--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
@@ -1,11 +1,13 @@
-\paragraph{\texttt{+ isAdmin(accessToken: String) : boolean}}\label{AP_Backend_isAdmin}%$$$M
+\paragraph{\texttt{+ isAdmin(accessToken: String) : Boolean}}\label{AP_Backend_isAdmin}%$$$M
 \paragraph*{Kurzbeschreibung}
 Überprüft ob der zugehörige Nutzer des Access-Tokens ein Administrator ist.
 \paragraph*{Beschreibung}
 Diese Methode fragt die Nutzerrolle vom Server ab und gibt dabei wahr zurück, wenn dieser ein Administrator ist.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item accessToken: String = Access-Token des zu prüfenden Benutzers
+    \item accessToken: String = Access-Token des zu prüfenden Benutzers.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, falls Administrator, falsch sonst
+Wahr, falls Administrator, falsch sonst.
+\paragraph*{Berechtigungslevel}
+Benutzer.
